<resources>
    <string name="app_name">Medical Info</string>
    <string name="add_med_item">Add Medical Item</string>
    <string name="view_med_items">View Medical Items</string>
    <string name="add_doctor">New Doctor</string>
    <string name="doctor_name">doctor name</string>
    <string name="doctor_address">doctor address</string>
    <string name="doctor_address_sample">1234 Something Drive, Alexandria VA 22102</string>
    <string name="save_doctor">Save Doctor</string>
    <string name="save_document">Save Document</string>
    <string name="document_notes">notes</string>
    <string name="document_name">document_name</string>
    <string name="save_appt">Save Appointment</string>
    <string name="appointment_name">name</string>
    <string name="date">DATE</string>
    <string name="time">TIME</string>
    <string name="view_appointments">View Appointments</string>
    <string name="add_document">Add Document</string>
    <string name="view_documents">View Documents</string>
    <string name="add_appointment">New Appointment</string>
    <string name="view_doctors">View Doctors</string>
    <string name="doctor_phone_number">doctor phone number</string>
    <string name="phone">phone</string>
    <string name="navigation_pin">navigation pin</string>
    <string name="scan_document">Scan Document</string>
    <string name="new_appointment">New Appointment</string>
    <string name="scan_and_crop_documents">Scan, Crop and Save Document</string>
</resources>
