<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/name"
        android:hint="@string/doctor_name"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/doctor_address"
        android:hint="@string/doctor_address"
        android:layout_below="@+id/name"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/save_button"
        android:layout_below="@+id/doctor_address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/save_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>