<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="75dp">

    <TextView
        android:id="@+id/appointment_name"
        android:text="@string/doctor_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/appt_address"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
        android:layout_below="@+id/appointment_name"
        android:text="@string/doctor_address_sample"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/map_pin"
        android:contentDescription="@string/navigation_pin"
        android:src="@drawable/ic_map_pin_underline"
        android:layout_marginEnd="8dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_width="40dp"
        android:layout_height="40dp" />

</RelativeLayout>