<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="4dp"
    android:id="@+id/doctor_item_view"
    android:layout_width="match_parent"
    android:layout_height="75dp">

    <RelativeLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/doctor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/doctor_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/doctor_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/doctor_name"
            android:layout_alignParentBottom="true"
            android:gravity="bottom"
            android:text="@string/doctor_address_sample"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <ImageView
            android:id="@+id/phone"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/phone"
            android:src="@drawable/ic_phone" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>