<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/appointment_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/info_container_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_layout"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <Spinner
            android:id="@+id/doctor_spinner"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/info_container_two"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_container_one"
        android:layout_marginTop="16dp"
        android:weightSum="2">

        <Button
            android:id="@+id/date_picker_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date" />

        <Button
            android:id="@+id/time_picker_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/info_container_three"
        android:orientation="horizontal"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_container_two"
        android:layout_marginTop="4dp"
        android:weightSum="2">

        <TextView
            android:id="@+id/date_picker_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date" />

        <TextView
            android:id="@+id/time_picker_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time" />

    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_container_three"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/save_appt" />

</RelativeLayout>